kubernetes/apps/agents/hive/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hive
  namespace: agents
spec:
  hostnames:
  - hive.timcasa.me
  parentRefs:
  - name: envoy-internal
    namespace: network
  rules:
  - backendRefs:
    - name: hive
      port: 8070
